[project]
name = "adelecv"
version = "0.0.1"
authors = [
  { name="Denis Mamatin", email="mamatin-denis@yandex.ru" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#packages = [
#    { include = "AdeleCV" }
#]


[project.urls]
"Homepage" = "https://github.com/AsakoKabe/AdeleCV"
"Bug Tracker" = "https://github.com/AsakoKabe/AdeleCV/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"