[tool.poetry]
name = "adelecv"
version = "0.0.2"
authors = ["Denis Mamatin <mamatin-denis@yandex.ru>"]
description = ""
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.poetry.group.dev.dependencies]
faculty-sphinx-theme = "^0.3.1"
autodocsumm = "^0.2.10"
docutils = "0.17.1"
nbsphinx = "^0.8.12"
ipython = "^8.10.0"
pylint = "^2.16.2"
flake8 = "^6.0.0"
isort = "^5.12.0"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
optuna = "^3.1.0"
tqdm = "^4.64.1"
opencv-python = "^4.7.0.72"
pydantic = "^1.10.5"
dash = "^2.8.1"
dash-bootstrap-components = "^1.4.0"
python-dotenv = "^1.0.0"
dash-mantine-components = "^0.11.1"
dash-extensions = "^0.1.13"
tensorboard = "^2.12.0"
albumentations = "^1.3.0"
segmentation-models-pytorch = "^0.3.2"
fiftyone = "^0.19.1"
kaleido = "0.2.1"
click = "^8.1.3"

[project.urls]
"Homepage" = "https://github.com/AsakoKabe/AdeleCV"
"Bug Tracker" = "https://github.com/AsakoKabe/AdeleCV/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
adelecv_dashboard = 'adelecv.ui.dashboard.index:main'


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

